Added runtime compilation for shared project.

--- a/Shared/Views/Shared/_appLayout.cshtml
+++ b/Shared/Views/Shared/_appLayout.cshtml
@@ -11,5 +11,11 @@
             @RenderBody()
         </main>
     </div>
+
+    <footer class="border-top footer text-muted">
+        <div class="container">
+            Micro Frontends PoC in .NET
+        </div>
+    </footer>
 </body>
 </html>
