--- a/App/Views/Home/Index.cshtml
+++ b/App/Views/Home/Index.cshtml
@@ -2,7 +2,15 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<h1 class="display-4">Welcome</h1>
+<p>
+    A proof of concept demonstrating mixing:
+    <ul>
+        <li>Traditional MVC (i.e., server-side .cshtml);</li>
+        <li>Blazor server-side;</li>
+        <li>Blazor client-side.</li>
+    </ul>
+</p>
+<p>
+    Each technology is hosted in its own process.
+</p>
