--- a/App/Views/_ViewImports.cshtml
+++ b/App/Views/_ViewImports.cshtml
@@ -1,3 +1,1 @@
-﻿@using App
-@using App.Models
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
