--- a/Shared/Views/Shared/_appLayout.cshtml
+++ b/Shared/Views/Shared/_appLayout.cshtml
@@ -18,7 +18,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark">Dashboard</a>
+                            <a class="nav-link text-dark" href="/Dashboard">Dashboard</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark">Blazor SS 1</a>
