Displayed process ID in each page.

--- a/Dashboard/Views/Home/Index.cshtml
+++ b/Dashboard/Views/Home/Index.cshtml
@@ -5,3 +5,6 @@
 <p>
     Dashboard.  The main view is server-side MVC.
 </p>
+<p>
+    This was rendered from process Id=@System.Diagnostics.Process.GetCurrentProcess().Id
+</p>
