--- a/Home/Views/Home/Index.cshtml
+++ b/Home/Views/Home/Index.cshtml
@@ -14,3 +14,6 @@
 <p>
     Each technology is hosted in its own process.
 </p>
+<p>
+    This was rendered from process Id=@System.Diagnostics.Process.GetCurrentProcess().Id
+</p>
