--- a/BlazorSS1/_Imports.razor
+++ b/BlazorSS1/_Imports.razor
@@ -5,5 +5,5 @@
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
-@using Module2
-@using Module2.Shared
+@using BlazorSS1
+@using BlazorSS1.Shared
