--- a/Shared/Views/Shared/_appLayout.cshtml
+++ b/Shared/Views/Shared/_appLayout.cshtml
@@ -21,7 +21,7 @@
                             <a class="nav-link text-dark" href="/Dashboard" data-fetch="mvc">Dashboard</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark">Blazor SS 1</a>
+                            <a class="nav-link text-dark" href="/BlazorSS1" data-detch="blazor-ss">Blazor SS1</a>
                         </li>
                     </ul>
                 </div>
