Minor text update.

--- a/Dashboard/Views/Home/Index.cshtml
+++ b/Dashboard/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <p>
-    Dashboard.  The main view is server-side MVC.
+    Dashboard.  This view is rendered server-side using MVC.
 </p>
 <p>
     This was rendered from process Id=@System.Diagnostics.Process.GetCurrentProcess().Id
