--- a/Dashboard/Views/Home/Index.cshtml
+++ b/Dashboard/Views/Home/Index.cshtml
@@ -6,5 +6,5 @@
     Dashboard.  This view is rendered server-side using MVC.
 </p>
 <p>
-    This was rendered from process Id=@System.Diagnostics.Process.GetCurrentProcess().Id
+    This was rendered from process Id=@System.Diagnostics.Process.GetCurrentProcess().Id Framework=@System.Runtime.InteropServices.RuntimeInformation.FrameworkDescription
 </p>
