--- a/Home/Views/Home/Index.cshtml
+++ b/Home/Views/Home/Index.cshtml
@@ -15,5 +15,5 @@
     Each technology is hosted in its own process.
 </p>
 <p>
-    This was rendered from process Id=@System.Diagnostics.Process.GetCurrentProcess().Id
+    This was rendered from process Id=@System.Diagnostics.Process.GetCurrentProcess().Id Framework=@System.Runtime.InteropServices.RuntimeInformation.FrameworkDescription
 </p>
