Demonstrated multiple server-side apps on a single page.

--- a/BlazorSS1/_Imports.razor
+++ b/BlazorSS1/_Imports.razor
@@ -6,4 +6,5 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
 @using BlazorSS1
+@using BlazorSS1.Components
 @using BlazorSS1.Shared
