--- a/BlazorSS1/Pages/_Host.cshtml
+++ b/BlazorSS1/Pages/_Host.cshtml
@@ -1,13 +1,18 @@
 ﻿@page "/"
 @namespace BlazorSS1.Pages
+@using BlazorSS1.Components
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     Layout = "_appLayout";
     ViewData["BaseUrl"] = "/BlazorSS1/";
 }
 
-<app>
-    <component type="typeof(App)" render-mode="Server" />
-</app>
+<div>
+    <component type="typeof(App)" render-mode="ServerPrerendered" />
+</div>
+
+<div>
+    <component type="typeof(HostDetail)" render-mode="Server" />
+</div>
 
 <script src="_framework/blazor.server.js"></script>
