Re-added counter to demonstrate multiple server-side components on a single page.

--- a/BlazorSS1/Pages/_Host.cshtml
+++ b/BlazorSS1/Pages/_Host.cshtml
@@ -12,6 +12,7 @@
 </div>
 
 <div>
+    <component type="typeof(Counter)" render-mode="Server" />
     <component type="typeof(HostDetail)" render-mode="Server" />
 </div>
 
