--- a/BlazorSS1/Pages/Index.razor
+++ b/BlazorSS1/Pages/Index.razor
@@ -3,4 +3,15 @@
 <p>Blazor Server Side</p>
 
 <Counter />
+
+<div>
+    <a href="Page2">Page 2</a>
+</div>
+
+<br/>
+
+<div>
+    <a href="/Dashboard">Dashboard</a>
+</div>
+
 <HostDetail />
