Added full namespace (so Shared doesn't clash inside individual modules).

--- a/BlazorSS1/_Imports.razor
+++ b/BlazorSS1/_Imports.razor
@@ -5,6 +5,6 @@
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
-@using BlazorSS1
-@using BlazorSS1.Components
-@using BlazorSS1.Shared
+@using MfePoc.BlazorSS1
+@using MfePoc.BlazorSS1.Components
+@using MfePoc.BlazorSS1.Shared
