--- a/BlazorSS1/Pages/_Host.cshtml
+++ b/BlazorSS1/Pages/_Host.cshtml
@@ -1,9 +1,11 @@
 ﻿@page "/"
-@namespace BlazorSS1.Pages
+@namespace MfePoc.BlazorSS1.Pages
+@using MfePoc.Shared.Views.Shared
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
-    Layout = "_appLayout";
-    ViewData["BaseUrl"] = "/BlazorSS1/";
+    this.SetAppLayout(
+        title: "BlazorSS1",
+        baseUrl: "/BlazorSS1/");
 }
 
 <div>
