--- a/Shared/Views/Shared/_appLayout.cshtml
+++ b/Shared/Views/Shared/_appLayout.cshtml
@@ -7,8 +7,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Micro Frontends PoC in .NET - @ViewData["Title"]</title>
-    <link rel="stylesheet" href="~/_content/Shared/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/_content/Shared/css/site.css" />
+    <link rel="stylesheet" href="~/_content/MfePoc.Shared/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/_content/MfePoc.Shared/css/site.css" />
     @if (!string.IsNullOrWhiteSpace(baseUrl))
     {
         <base href="@baseUrl" />
@@ -48,9 +48,9 @@
         </div>
     </footer>
 
-    <script src="~/_content/Shared/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/_content/Shared/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/_content/Shared/js/site.js" asp-append-version="true"></script>
+    <script src="~/_content/MfePoc.Shared/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/_content/MfePoc.Shared/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/_content/MfePoc.Shared/js/site.js" asp-append-version="true"></script>
     @RenderSection("Scripts", required: false)
 
 </body>
