Changed ViewData references to extension method.

--- a/Dashboard/Views/Home/Index.cshtml
+++ b/Dashboard/Views/Home/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@{
-    ViewData["Title"] = "Dashboard";
+    this.SetAppLayout(
+        title: "Dashboard",
+        baseUrl: "/Dashboard/");
 }
 
 <p>
