--- a/Home/Views/Home/Index.cshtml
+++ b/Home/Views/Home/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    this.SetAppLayout(
+        title: "Home Page",
+        baseUrl: null);
 }
 
 <h1 class="display-4">Welcome</h1>
