Added second blazor SS project/module.

--- a/Shared/Views/Shared/_appLayout.cshtml
+++ b/Shared/Views/Shared/_appLayout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" href="/BlazorSS1" data-detch="blazor-ss">Blazor SS1</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="/BlazorSS2" data-detch="blazor-ss">Blazor SS2</a>
+                        </li>
                     </ul>
                 </div>
             </div>
