--- a/Shared/Views/Shared/_appLayout.cshtml
+++ b/Shared/Views/Shared/_appLayout.cshtml
@@ -55,6 +55,16 @@
     <script src="~/_content/MfePoc.Shared/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/_content/MfePoc.Shared/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/_content/MfePoc.Shared/js/site.js" asp-append-version="true"></script>
+
+    <!-- blazor server-side -->
+    @if (layoutModel.EnableBlazorServerSide)
+    {
+        <script src="@(layoutModel.BaseUrl)_framework/blazor.server.js" autostart="false"></script>
+        <script>
+            window.Blazor.start();
+        </script>
+    }
+
     @RenderSection("Scripts", required: false)
 
 </body>
