Renamed generate wasm project (there will have to be a separate project for the server).

--- a/BlazorCS1.Client/_Imports.razor
+++ b/BlazorCS1.Client/_Imports.razor
@@ -6,5 +6,5 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using MfePoc.BlazorCS1
-@using MfePoc.BlazorCS1.Shared
+@using MfePoc.BlazorCS1.Client
+@using MfePoc.BlazorCS1.Client.Shared
