--- a/Shared/Views/Shared/_appLayout.cshtml
+++ b/Shared/Views/Shared/_appLayout.cshtml
@@ -28,11 +28,23 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" href="/Dashboard" data-fetch="mvc">Dashboard</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" href="/BlazorSS1" data-detch="blazor-ss">Blazor SS1</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Blazor SS1</a>
+                            <div class="dropdown-menu">
+                                <a class="dropdown-item" href="/BlazorSS1/">Home</a>
+                                <a class="dropdown-item" href="/BlazorSS1/Page2">Page2</a>
+                            </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="/BlazorSS2" data-detch="blazor-ss">Blazor SS2</a>
+                            <a class="nav-link text-dark" href="/BlazorSS2" data-fetch="blazor-ss">Blazor SS2</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Blazor CS1</a>
+                            <div class="dropdown-menu">
+                                <a class="dropdown-item" href="/BlazorCS1/">Home</a>
+                                <a class="dropdown-item" href="/BlazorCS1/counter">Counter</a>
+                                <a class="dropdown-item" href="/BlazorCS1/fetchdata">Fetch data</a>
+                            </div>
                         </li>
                     </ul>
                 </div>
