Replaced hard-coded Blazor client style-sheet reference.

--- a/BlazorCS1/Pages/_Host.cshtml
+++ b/BlazorCS1/Pages/_Host.cshtml
@@ -6,7 +6,8 @@
     this.SetAppLayout(
         title: "BlazorCS1",
         baseUrl: "/BlazorCS1/",
-        enableBlazorClientSide: true);
+        enableBlazorClientSide: true,
+        clientStyles: "MfePoc.BlazorCS1.Client.styles.css");
 }
 
 <div id="app">Loading...</div>
