Added Blazor client-side project 2.

--- a/Shared/Views/Shared/_appLayout.cshtml
+++ b/Shared/Views/Shared/_appLayout.cshtml
@@ -50,6 +50,9 @@
                                 <a class="dropdown-item" href="/BlazorCS1/fetchdata">Fetch data</a>
                             </div>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="/BlazorCS2" data-fetch="blazor-ss">Blazor CS2</a>
+                        </li>
                     </ul>
                 </div>
             </div>
