--- a/Home/Views/Home/Index.cshtml
+++ b/Home/Views/Home/Index.cshtml
@@ -20,9 +20,15 @@
     This was rendered from process Id=@System.Diagnostics.Process.GetCurrentProcess().Id Framework=@System.Runtime.InteropServices.RuntimeInformation.FrameworkDescription
 </p>
 
-<!-- 'touch' each of the other projects in an iframe to start the processes up eagerly -->
-<iframe style="display:none" src="/Dashboard"></iframe>
-<iframe style="display:none" src="/BlazorSS1"></iframe>
-<iframe style="display:none" src="/BlazorSS2"></iframe>
-<iframe style="display:none" src="/BlazorCS1"></iframe>
-<iframe style="display:none" src="/BlazorCS2"></iframe>
+@section Scripts {
+    <script>
+        $(function () {
+            // 'touch' each of the other projects in an iframe to start the processes up eagerly
+            $.ajax('/Dashboard');
+            $.ajax('/BlazorSS1');
+            $.ajax('/BlazorSS2');
+            $.ajax('/BlazorCS1');
+            $.ajax('/BlazorCS2');
+        });
+    </script>
+}
