Changed render-mode to server (so client doesn't start clicking buttons before the associated scripts have downloaded).

--- a/BlazorSS1/Pages/_Host.cshtml
+++ b/BlazorSS1/Pages/_Host.cshtml
@@ -10,5 +10,5 @@
 }
 
 <div>
-    <component type="typeof(App)" render-mode="ServerPrerendered" />
+    <component type="typeof(App)" render-mode="Server" />
 </div>
