--- a/BlazorSS2/Pages/_Host.cshtml
+++ b/BlazorSS2/Pages/_Host.cshtml
@@ -10,5 +10,5 @@
 }
 
 <div>
-    <component type="typeof(App)" render-mode="ServerPrerendered" />
+    <component type="typeof(App)" render-mode="Server" />
 </div>
