--- a/Shared/Views/Shared/_appLayout.cshtml
+++ b/Shared/Views/Shared/_appLayout.cshtml
@@ -1,4 +1,6 @@
 ﻿@namespace MfePoc.Shared.Views.Shared
+@inject Microsoft.AspNetCore.Hosting.IWebHostEnvironment hostingEnv
+@using Microsoft.Extensions.Hosting
 @{
     var layoutModel = this.LayoutModel();
 }
@@ -8,6 +10,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Micro Frontends PoC in .NET - @layoutModel.Title</title>
+    @if (!hostingEnv.IsDevelopment())
+    {
+        <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css" />
+    }
     <link rel="stylesheet" href="~/_content/MfePoc.Shared/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/_content/MfePoc.Shared/css/site.css" />
     @if (!string.IsNullOrWhiteSpace(layoutModel.BaseUrl))
@@ -75,16 +81,32 @@
     <script src="~/_content/MfePoc.Shared/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/_content/MfePoc.Shared/js/site.js" asp-append-version="true"></script>
 
-    @* blazor server-side *@
     @if (layoutModel.EnableBlazorServerSide)
     {
         <script src="@(layoutModel.BaseUrl)_framework/blazor.server.js"></script>
     }
 
-    @* blazor client-side *@
     @if (layoutModel.EnableBlazorClientSide)
     {
         <script src="@(layoutModel.BaseUrl)_framework/blazor.webassembly.js"></script>
+    }
+
+    @if (!hostingEnv.IsDevelopment())
+    {
+        <script src="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js" data-cfasync="false"></script>
+        <script>
+            window.cookieconsent.initialise({
+                "palette": {
+                    "popup": {
+                        "background": "#000"
+                    },
+                    "button": {
+                        "background": "#f1d600"
+                    }
+                },
+                "theme": "classic"
+            });
+        </script>
     }
 
     @RenderSection("Scripts", required: false)
