--- a/Shared/Views/Shared/_appLayout.cshtml
+++ b/Shared/Views/Shared/_appLayout.cshtml
@@ -73,7 +73,7 @@
             Micro Frontends PoC in .NET
             @if (!hostingEnv.IsProduction())
             {
-                <span class="float-right">Environment=@hostingEnv.EnvironmentName</span>
+                <span class="float-right pl-3 pr-3" style="background: wheat;">Environment=@hostingEnv.EnvironmentName</span>
             }
 
         </div>
