Changed analytics to display in production only (rather than not development - there are no other environments just now, but you never know).

--- a/Shared/Views/Shared/_appLayout.cshtml
+++ b/Shared/Views/Shared/_appLayout.cshtml
@@ -8,7 +8,7 @@
 <html lang="en">
 <head>
 
-    @if (!hostingEnv.IsDevelopment())
+    @if (hostingEnv.IsProduction())
     {
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-25EMG3LPGN"></script>
