Corrected menu hyperlinks (to prevent page reload).

--- a/Shared/Views/Shared/_appLayout.cshtml
+++ b/Shared/Views/Shared/_appLayout.cshtml
@@ -47,7 +47,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="/Dashboard" data-fetch="mvc">Dashboard</a>
+                            <a class="nav-link text-dark" href="/Dashboard/" data-fetch="mvc">Dashboard</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Blazor SS1</a>
@@ -57,7 +57,7 @@
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="/BlazorSS2" data-fetch="blazor-ss">Blazor SS2</a>
+                            <a class="nav-link text-dark" href="/BlazorSS2/" data-fetch="blazor-ss">Blazor SS2</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Blazor CS1</a>
@@ -68,7 +68,7 @@
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="/BlazorCS2" data-fetch="blazor-ss">Blazor CS2</a>
+                            <a class="nav-link text-dark" href="/BlazorCS2/" data-fetch="blazor-ss">Blazor CS2</a>
                         </li>
                     </ul>
                 </div>
