Pushed all SignalR logic into ClientHub, and ensured there is a single SignalR circuit used.

--- a/BlazorCS1.Client/Pages/Index.razor
+++ b/BlazorCS1.Client/Pages/Index.razor
@@ -5,17 +5,4 @@
 
 Welcome to your new app.
 
-<p>
-    @_message
-</p>
-
-@code {
-
-    private string _message;
-
-    protected override async Task OnInitializedAsync()
-    {
-        var hub = await ClientHub.GetStartedHubAsync(NavManager);
-        _message = (string)await hub.InvokeCoreAsync(nameof(ClientHub.RequestHostDetail), typeof(string), new object[0]);
-    }
-} 
+<HostDetail />
