--- a/BlazorCS1.Client/_Imports.razor
+++ b/BlazorCS1.Client/_Imports.razor
@@ -8,3 +8,4 @@
 @using Microsoft.JSInterop
 @using MfePoc.BlazorCS1.Client
 @using MfePoc.BlazorCS1.Client.Shared
+@using MfePoc.BlazorCS1.Client.Components
