--- a/Modules/Generation/Pages/_Host.cshtml
+++ b/Modules/Generation/Pages/_Host.cshtml
@@ -1,11 +1,11 @@
 ﻿@page "/"
-@namespace MfePoc.BlazorSS1.Pages
+@namespace MfePoc.Generation.Pages
 @using MfePoc.Shared.Views.Shared
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     this.SetAppLayout(
-        title: "BlazorSS1",
-        baseUrl: "/BlazorSS1/",
+        title: "Generation",
+        baseUrl: "/Generation/",
         enableBlazorServerSide: true);
 }
 
