--- a/Modules/Generation/_Imports.razor
+++ b/Modules/Generation/_Imports.razor
@@ -5,5 +5,5 @@
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
-@using MfePoc.BlazorSS1
-@using MfePoc.BlazorSS1.Components
+@using MfePoc.Generation
+@using MfePoc.Generation.Components
