--- a/Shared/Views/Shared/_appLayout.cshtml
+++ b/Shared/Views/Shared/_appLayout.cshtml
@@ -50,10 +50,12 @@
                             <a class="nav-link text-dark" href="/Dashboard/" data-fetch="mvc">Dashboard</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Blazor SS1</a>
+                            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Generation</a>
                             <div class="dropdown-menu">
-                                <a class="dropdown-item" href="/BlazorSS1/">Home</a>
-                                <a class="dropdown-item" href="/BlazorSS1/Page2">Page2</a>
+                                <a class="dropdown-item" href="/Generation/">Index</a>
+                                <a class="dropdown-item" href="/Generation/GenerateRed">Red</a>
+                                <a class="dropdown-item" href="/Generation/GenerateGreen">Green</a>
+                                <a class="dropdown-item" href="/Generation/GenerateBlue">Blue</a>
                             </div>
                         </li>
                         <li class="nav-item">
