--- a/Modules/Generation/Pages/GenerateBlue.razor
+++ b/Modules/Generation/Pages/GenerateBlue.razor
@@ -1,10 +1,14 @@
-﻿@page "/GenerateRed"
+﻿@page "/GenerateBlue"
 
-<button class="btn btn-primary" @onclick="Generate">Generate Red</button>
+<button class="btn btn-primary" @onclick="Generate">Generate Blue</button>
 
+<br />
 <br />
 
 <a href="">Back</a>
+
+<br />
+<br />
 
 <StockLevels @ref="_stockLevels" />
 
@@ -16,7 +20,8 @@
 
     private void Generate()
     {
-        Stock.GenerateRed();
+        Stock.GenerateBlue();
         _stockLevels.Refresh();
     }
+
 }
