Corrected URLs from home page, and updated module description.

--- a/Home/Views/Home/Index.cshtml
+++ b/Home/Views/Home/Index.cshtml
@@ -25,7 +25,7 @@
         $(function () {
             // 'touch' each of the other projects in an iframe to start the processes up eagerly
             $.ajax('/Dashboard');
-            $.ajax('/BlazorSS1');
+            $.ajax('/Generation');
             $.ajax('/BlazorSS2');
             $.ajax('/BlazorCS1');
             $.ajax('/BlazorCS2');
