--- a/Modules/Generation/Pages/Index.razor
+++ b/Modules/Generation/Pages/Index.razor
@@ -1,10 +1,11 @@
 ﻿@page "/"
 
-<h2>Colour Service</h2>
+<h2>Colour Generation Service</h2>
 
-<p>This modules uses Blazor server-side, implemented in BlazorSS1</p>
+<p>This module is the colour generation service.  It generates and maintains the stock of the primary colours Red, Green, and Blue.</p>
 
-<p>This is the colour service.  It generates and maintains the stock of Red, Green, and Blue.</p>
+<p>This modules uses Blazor server-side</p>
+
 
 <p>To generate colours, use:</p>
 
@@ -18,6 +19,6 @@
 
 <StockLevels />
 
-<br/>
+<br />
 
 <HostDetail />
