Changed Stock to StockDb, and registered it as a singleton.

--- a/Modules/Generation/Pages/GenerateBlue.razor
+++ b/Modules/Generation/Pages/GenerateBlue.razor
@@ -1,4 +1,5 @@
 ﻿@page "/GenerateBlue"
+@inject StockDb StockDb
 
 <button class="btn btn-primary" @onclick="Generate">Generate Blue</button>
 
@@ -20,7 +21,7 @@
 
     private void Generate()
     {
-        Stock.GenerateBlue();
+        StockDb.GenerateBlue();
         _stockLevels.Refresh();
     }
 
