--- a/Modules/Generation/Components/StockLevels.razor
+++ b/Modules/Generation/Components/StockLevels.razor
@@ -1,6 +1,8 @@
-﻿<div>Red Level = <span style="background:#faa; padding: 2px;">@Stock.Red</span></div>
-<div>Green Level = <span style="background:#afa; padding: 2px;">@Stock.Green</span></div>
-<div>Blue Level = <span style="background:#aaf; padding: 2px;">@Stock.Blue</span></div>
+﻿@inject StockDb StockDb
+
+<div>Red Level = <span style="background:#faa; padding: 2px;">@StockDb.Red</span></div>
+<div>Green Level = <span style="background:#afa; padding: 2px;">@StockDb.Green</span></div>
+<div>Blue Level = <span style="background:#aaf; padding: 2px;">@StockDb.Blue</span></div>
 
 @code {
     public void Refresh()
