--- a/Modules/Generation/Pages/GenerateRed.razor
+++ b/Modules/Generation/Pages/GenerateRed.razor
@@ -1,4 +1,5 @@
 ﻿@page "/GenerateRed"
+@inject StockDb StockDb
 
 <button class="btn btn-primary" @onclick="Generate">Generate Red</button>
 
@@ -20,7 +21,7 @@
 
     private void Generate()
     {
-        Stock.GenerateRed();
+        StockDb.GenerateRed();
         _stockLevels.Refresh();
     }
 }
