--- a/Modules/Mixing/Server/Pages/_Host.cshtml
+++ b/Modules/Mixing/Server/Pages/_Host.cshtml
@@ -1,13 +1,13 @@
 ﻿@page "/"
-@namespace MfePoc.BlazorCS1.Pages
+@namespace MfePoc.Mixing.Server.Pages
 @using MfePoc.Shared.Views.Shared
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     this.SetAppLayout(
-        title: "BlazorCS1",
-        baseUrl: "/BlazorCS1/",
+        title: "Mixing",
+        baseUrl: "/Mixing/",
         enableBlazorClientSide: true,
-        clientStyles: "MfePoc.BlazorCS1.Client.styles.css");
+        clientStyles: "MfePoc.Mixing.Client.styles.css");
 }
 
 <div id="app">Loading...</div>
