--- a/Modules/Mixing/Client/_Imports.razor
+++ b/Modules/Mixing/Client/_Imports.razor
@@ -6,6 +6,6 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using MfePoc.BlazorCS1.Client
-@using MfePoc.BlazorCS1.Client.Shared
-@using MfePoc.BlazorCS1.Client.Components
+@using MfePoc.Mixing.Client
+@using MfePoc.Mixing.Client.Shared
+@using MfePoc.Mixing.Client.Components
