Moved module into sub-folder for consistency.

--- a/Modules/Generation/Module/Pages/Index.razor
+++ b/Modules/Generation/Module/Pages/Index.razor
@@ -4,7 +4,7 @@
 
 <p>This module is the colour generation service.  It generates and maintains the stock of the primary colours Red, Green, and Blue.</p>
 
-<p>This modules uses Blazor server-side</p>
+<p>This modules uses Blazor server-side.</p>
 
 
 <p>To generate colours, use:</p>
