Moved Dashboard module into its own folder.

--- a/Modules/Dashboard/Module/Views/Home/Index.cshtml
+++ b/Modules/Dashboard/Module/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <p>
-    Dashboard.  This view is rendered server-side using MVC.
+    This is the colour factory Dashboard, and is implemented using server-side MVC.
 </p>
 <p>
     This was rendered from process Id=@System.Diagnostics.Process.GetCurrentProcess().Id Framework=@System.Runtime.InteropServices.RuntimeInformation.FrameworkDescription
