Adjusted notification on tiny devices.

--- a/Shared/Views/Shared/_appLayout.cshtml
+++ b/Shared/Views/Shared/_appLayout.cshtml
@@ -35,6 +35,14 @@
     {
         <link href="@layoutModel.ClientStyles" rel="stylesheet" />
     }
+
+    <style>
+        @@media screen and (max-width: 576px) {
+            [data-notify="container"] {
+                max-width: 70%;
+            }
+        }
+    </style>
 </head>
 <body>
     <header>
