--- a/Shared/Views/Shared/_appLayout.cshtml
+++ b/Shared/Views/Shared/_appLayout.cshtml
@@ -108,6 +108,7 @@
     <script src="~/_content/MfePoc.Shared/js/site.js" asp-append-version="true"></script>
 
     <script src="/Dashboard/lib/bootstrap-notify/dist/bootstrap-notify.min.js"></script>
+    <script src="/Dashboard/lib/signalr/signalr.min.js"></script>
 
     @if (layoutModel.EnableBlazorServerSide)
     {
