Added bus message when stock is updated.

--- a/Modules/Generation/Module/Pages/GenerateGreen.razor
+++ b/Modules/Generation/Module/Pages/GenerateGreen.razor
@@ -19,9 +19,9 @@
 
     protected StockLevels _stockLevels;
 
-    private void Generate()
+    private async Task Generate()
     {
-        StockDb.GenerateGreen();
+        await StockDb.GenerateGreenAsync();
         _stockLevels.Refresh();
     }
 
