--- a/Modules/Generation/Module/Pages/GenerateBlue.razor
+++ b/Modules/Generation/Module/Pages/GenerateBlue.razor
@@ -19,9 +19,9 @@
 
     protected StockLevels _stockLevels;
 
-    private void Generate()
+    private async Task Generate()
     {
-        StockDb.GenerateBlue();
+        await StockDb.GenerateBlueAsync();
         _stockLevels.Refresh();
     }
 
