--- a/Modules/Generation/Module/Pages/GenerateRed.razor
+++ b/Modules/Generation/Module/Pages/GenerateRed.razor
@@ -19,9 +19,9 @@
 
     protected StockLevels _stockLevels;
 
-    private void Generate()
+    private async Task Generate()
     {
-        StockDb.GenerateRed();
+        await StockDb.GenerateRedAsync();
         _stockLevels.Refresh();
     }
 }
