Updated button colours to match generation.

--- a/Modules/Generation/Module/Pages/GenerateRed.razor
+++ b/Modules/Generation/Module/Pages/GenerateRed.razor
@@ -1,7 +1,7 @@
 ﻿@page "/GenerateRed"
 @inject StockDb StockDb
 
-<button class="btn btn-primary" @onclick="Generate">Generate Red</button>
+<button class="btn btn-danger" @onclick="Generate">Generate Red</button>
 
 <br />
 <br />
