--- a/Modules/Generation/Module/Pages/GenerateGreen.razor
+++ b/Modules/Generation/Module/Pages/GenerateGreen.razor
@@ -1,7 +1,7 @@
 ﻿@page "/GenerateGreen"
 @inject StockDb StockDb
 
-<button class="btn btn-primary" @onclick="Generate">Generate Green</button>
+<button class="btn btn-success" @onclick="Generate">Generate Green</button>
 
 <br />
 <br />
