--- a/Modules/Generation/Module/Pages/GenerateBlue.razor
+++ b/Modules/Generation/Module/Pages/GenerateBlue.razor
@@ -1,7 +1,7 @@
 ﻿@page "/GenerateBlue"
 @inject StockDb StockDb
 
-<button class="btn btn-primary" @onclick="Generate">Generate Blue</button>
+<BlueButton StockLevels=@(() => _stockLevels) />
 
 <br />
 <br />
@@ -17,12 +17,6 @@
 
 @code {
 
-    protected StockLevels _stockLevels;
-
-    private async Task Generate()
-    {
-        await StockDb.GenerateBlueAsync();
-        _stockLevels.Refresh();
-    }
+    private StockLevels _stockLevels;
 
 }
